--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8080
-  servlet:
-    context-path: /
+  port: 8081
+  context-path: /
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/db_film?serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/db_film?serverTimezone=GMT
     username: root
     password: 123456
   jpa:
